[package]
name = "rokol"
version = "0.1.3"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"
exclude = ["examples", "book", "src/imgui"]
description = "Wrapper of Sokol"
repository = "https://github.com/toyboot4e/rokol"
license = "MIT"
categories = ["game-development", "graphics"]
keywords = ["graphics", "gamedev"]

[features]
# https://doc.rust-lang.org/cargo/reference/features.html#the-features-section
default = []

glcore33 = ["rokol_ffi/glcore33"]
metal = ["rokol_ffi/metal"]
d3d11 = ["rokol_ffi/d3d11"]

use-fontstash = ["fontstash"]
# debug-ui = ["imgui"]

[dependencies]
log = "0.4.11"
bitflags = "1.2.1"

rokol_ffi = { path = "rokol_ffi", version = "0.1.2" }
# imgui = { version = "0.6.0", optional = true }
fontstash = { git = "https://github.com/toyboot4e/fontstash-rs", branch = "main", version = "0.1.5", optional = true }

[dev-dependencies]
# examples only dependencies
env_logger = "0.8.1"
image = "0.23.11"
glam = "0.11.0"

