[package]
name = "rokol"
version = "0.1.4"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"
exclude = ["examples", "book", "src/imgui"]
description = "Wrapper of Sokol"
repository = "https://github.com/toyboot4e/rokol"
license = "MIT"
categories = ["game-development", "graphics"]
keywords = ["graphics", "gamedev"]

[workspace]
members = ["rokol_ffi"]

[features]
# window backend
use-sokol-app = []
use-sdl2 = ["sdl2"]

# graphics backend
glcore33 = ["rokol_ffi/glcore33"]
metal = ["rokol_ffi/metal"]
d3d11 = ["rokol_ffi/d3d11"]

# optional supports
use-fontstash = ["fontstash"]
use-imgui-rs = ["imgui"]

[dependencies]
log = "0.4.11"
bitflags = "1.2.1"

rokol_ffi = { path = "rokol_ffi", version = "0.1.3" }

sdl2 = { version = "0.34.3", optional = true }

imgui = { version = "0.6.0", optional = true }
fontstash = { git = "https://github.com/toyboot4e/fontstash-rs", branch = "main", version = "0.1.5", optional = true }

[dev-dependencies]

