[package]
name = "rokol"
version = "0.3.3"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"
exclude = ["examples", "book"]
description = "Rust bindings to Sokol"
repository = "https://github.com/toyboot4e/rokol"
license = "MIT"
categories = ["game-development", "graphics"]
keywords = ["graphics", "gamedev"]

[features]
# show off all the items
default = ["sdl2", "impl-gfx", "serde", "glcore33", "fontstash"]

impl-app = ["rokol_ffi/impl-app"]
impl-gfx = ["rokol_ffi/impl-gfx", "rokol_derive"]

# graphics backend
glcore33 = ["rokol_ffi/glcore33"]
metal = ["rokol_ffi/metal"]
d3d11 = ["rokol_ffi/d3d11"]

[package.metadata.docs.rs]
# show all the items
features = ["impl-app", "sdl2", "impl-gfx", "glcore33", "fontstash"]

[dependencies]
rokol_ffi = { path = "../rokol_ffi", version = "0.3.0" }
rokol_derive = { path = "../rokol_derive", version = "0.1.0", optional = true }

log = "0.4.11"
bitflags = "1.2.1"

sdl2 = { version = "0.35.1", optional = true }
fontstash = { git = "https://github.com/toyboot4e/fontstash-rs", branch = "main", version = "0.1.6", optional = true }
serde = { version = "1.0.130", features = ["std", "derive"], optional = true }

