[package]
name = "rokol_derive"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"
exclude = []
description = "Derive crate for Rokol"
repository = "https://github.com/toyboot4e/rokol"
license = "MIT"
categories = []
keywords = []

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = { version = "1.0.70", features = ["derive", "parsing", "printing", "clone-impls", "proc-macro", "extra-traits"] }

[dev-dependencies]
rokol = { path = "../rokol", features = ["impl-gfx", "glcore33"] }

