[package]
name = "rokol_ffi"
version = "0.2.3"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"
exclude = ["examples"]
description = "Rust FFI to Sokol"
repository = "https://github.com/toyboot4e/rokol"
license = "MIT"
keywords = ["gamedev", "ffi"]

# https://doc.rust-lang.org/cargo/reference/build-scripts.html#the-links-manifest-key
links = "sokol"
# emits `DEP_SOKOL_GFX` to crates that list `rokol_ffi` in their `Cargo.toml`

[features]
impl-app = []
impl-gfx = []

# graphics backend for `sokol_gfx.h`
glcore33 = []
metal = []
d3d11 = []

[package.metadata.docs.rs]
# show off all the items
features = ["impl-app", "impl-gfx", "glcore33"]

[build-dependencies]
cc = "1.0.62"
bindgen = "0.55.1"
